corrected the alignment of the GA application

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -148,7 +148,7 @@ main#homepage {
 
   .volunteer-advertising{
     margin: auto;
-    width: 70vw;
+    max-width: 70vw;
     color: black;
 
     span{
